stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_pattern_unknown_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_pattern_unknown_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown record pattern field
   ╭─[tests/fixtures/diagnostics/types/record_pattern_unknown_field.ml:6:13]
 5 │   dbg(match value {
 6 │     point { z } -> z,
   ·             ┬
   ·             ╰── `point` has no field named `z`
 7 │     _ -> 0
   ╰────
  help: use one of the fields declared on this record type
